# fluffy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
patches/bevy_mesh/: .cargo_vcs_info.json  Cargo.toml
patches/bevy_mesh/src/: morph.rs
patches/bevy_pbr/: .cargo_vcs_info.json  Cargo.toml
patches/bevy_pbr/src/render/: mesh_types.wgsl
src/: error.rs  events.rs  lib.rs  main.rs  state.rs
src/animation/: bones.rs  mod.rs  procedural.rs
src/audio/: capture.rs  mod.rs  playback.rs  vad.rs
src/chat/: mod.rs  overlay.rs  state.rs
src/llm/: client.rs  mod.rs  tool_use.rs
src/llm/tools/: file_ops.rs  mod.rs  shell_exec.rs
src/mascot/: mod.rs
src/perch/: mod.rs  physics.rs  tracker.rs
src/pipeline/: coordinator.rs  lip_sync.rs  mod.rs  plugin.rs  relay.rs
src/stt/: download.rs  loader.rs  mod.rs  whisper.rs
src/tts/: client.rs  engine.rs  mod.rs  sentence.rs
src/tts/models/: config.rs  download.rs  mod.rs
src/tts/models/lfm2/: attention.rs  conv.rs  generate.rs  mod.rs
src/tts/models/miocodec/: fsq.rs  istft.rs  mod.rs  resnet.rs  snake.rs  transformer.rs  upsampler.rs
src/tts/models/wavlm/: global_encoder.rs  mod.rs
src/vrm/: expressions.rs  loader.rs  mod.rs
src/vrm/vrma/: loader.rs  mod.rs  player.rs  retarget.rs
src/window/: config.rs  drag.rs  mod.rs
tools/: build_chocolat_mascot_glb.py  convert_anim.sh  convert_vrma.sh  fbx_to_glb.py  migrate_vrm_to_vrm1.py  migrate_vrm_to_vrm1.sh  mixamo_to_glb.py  mixamo_to_vrma.py
